# advisor

./: .gitignore  AGENTS.md  PLAN.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.dev  .env.test  Dockerfile  pyproject.toml  requirements.txt  start_test_server.py
backend/app/: main.py
backend/app/api/: admin.py  agents.py  auth.py  news.py  plans.py  portfolio.py  strategies.py
backend/app/core/: agent_base.py  dependencies.py  langgraph_base.py  logging.py  prompt_manager.py  utils.py
backend/app/models/: auth.py  plan.py  portfolio.py  types.py
backend/app/services/: agent_service.py  auth_service.py  config_service.py  currency_service.py  forecast_service.py  forecasting_engine.py  forecasting_tools.py  history_service.py  llm_service.py  logger_service.py  macro_service.py  news_service.py  plan_service.py  portfolio_optimizer.py  pubsub_service.py  research_agent.py  risk_calculators.py  storage_service.py  user_provider.py
backend/config/: etf_config.yaml  forecasting_config.yaml
backend/config copy/: etf_config.yaml  forecasting_config.yaml  strategies_config.yaml
backend/prompts/portfolio_optimizer/: constraint_suggestions.jinja  portfolio_report.jinja  scenario_analysis.jinja
backend/prompts/research_agent/: market_scenarios.jinja
backend/tests/: conftest.py  manual_test_forecast.py  manual_test_forecasting.py  manual_test_history.py  manual_test_portfolio_async.py  test_auth_revocation.py  test_backtesting.py  test_endpoints.py  test_expense_ratio.py  test_news_service.py  test_utils.py  verify_research_agent.py
(+124 files in other folders)
